--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,4 @@
-﻿<footer style="background:#515151;">
+﻿<footer style="background:#f5f5f5;">
     <style>
         ul {
             display: block;
@@ -12,60 +12,67 @@
 
             color: white;
         }
+
+        footer .col-md-3 {
+            width: 12.5%;
+
+        }
+
+        footer a {color:#808080;}
     </style>
-    <div class="container">
-	<hr style="color:white"/>
-        <div class="row" style="color:white;">
-            <div class="col-md-3">
-             <ul>
-                 <li><b>Company</b></li>
-				 <li> &nbsp;</li>
-                 <li><a href="/aboutus">About Us</a></li>
-                 <li><a href="/contactus">Contact Us</a></li>
-                 <li><a href="/Privacy">Privacy</a></li>
-                 <li><a href="/terms">Terms of Service</a></li>
-             </ul>
+
+        <div class="container" style="padding-bottom: 10px">
+            <div class="row" style="color:white;">
+                <div class="col-md-3">
+                 <ul style=" padding: 0 0; ">
+                     <li><b style="color: #000000">Company</b></li>
+                     <li> &nbsp;</li>
+                     <li><a href="/aboutus">About Us</a></li>
+                     <li><a href="/contactus">Contact Us</a></li>
+                     <li><a href="/Privacy">Privacy</a></li>
+                     <li><a href="/terms">Terms of Service</a></li>
+                 </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul style=" padding: 0 0; ">
+                        <li><b style="color: #000000">Charity</b></li>
+                        <li> &nbsp;</li>
+                        <li><a href="/recipient/signup">Register</a></li>
+                        <li><a href="/recipient/login">Log In</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul style=" padding: 0 0; ">
+                        <li><b style="color: #000000">Campaign</b></li>
+                        <li> &nbsp;</li>
+                        <li><a href="/campaign/signup">Register</a></li>
+                        <li><a href="/campaign/login">Log In</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <ul style=" padding: 0 0; ">
+                        <li><b style="color: #000000">Contributors</b></li>
+                        <li> &nbsp;</li>
+                        <li><a href="/login/signup">Join</a></li>
+                        <li><a href="/login/signin">Log In</a></li>
+                        <li><a href="/charities/listCharities">List of Charities</a></li>
+                        <li><a href="/campaign/listCampaigns">List of Campaigns</a></li>
+                    </ul>
+                </div>
+                <div style="float: right"> <img src="/images/footerLogo.png"/></div>
             </div>
-            <div class="col-md-3">
-                <ul>
-				    <li><b>Charity</b></li>
-				    <li> &nbsp;</li>
-                    <li><a href="/recipient/signup">Register</a></li>
-					<li><a href="/recipient/login">Log In</a></li>
-                </ul>
+        </div>
+
+    <nav class="nav navbar-inverse navbar-fixed-bottom" style="background-color:  #121921;">
+        <div class="container-fluid">
+            <div class="container">
+            <div class="nav navbar-nav"  style="background-color:  #121921;">
+                <div class="container" style="padding: 10px 10px;color: #808080">
+
+                    © WillGive LLC.
+                </div>
             </div>
-            <div class="col-md-3">
-                <ul>
-				    <li><b>Campaign</b></li>
-				    <li> &nbsp;</li>
-                    <li><a href="/campaign/signup">Register</a></li>
-					<li><a href="/campaign/login">Log In</a></li>
-                </ul>
             </div>
-            <div class="col-md-3">
-                <ul>
-				    <li><b>Contributors</b></li>
-				    <li> &nbsp;</li>
-                    <li><a href="/login/signup">Join</a></li>
-					<li><a href="/login/signin">Log In</a></li>
-					<li><a href="/charities/listCharities">List of Charities</a></li>
-					<li><a href="/campaign/listCampaigns">List of Campaigns</a></li>
-                </ul>
-            </div>
-			</div>
-			<hr style="color:white"/>
-			<div class="row" style="color:white">			
-				<div class="col-md-6">
-				<img src='/images/icon.png'> &copy; WillGive LLC. 	
-				</div>
-			    <div class="col-md-6" align=right>
-				<a href="https://itunes.apple.com/us/app/uber/id368677368?mt=8"
-					target="_blank" style="background:transparent url(/images/appButton.png) no-repeat left top;display:inline-block;width:96px;height:28px;"></a>
-				<a href="https://play.google.com/store/apps/details?id=com.ubercab"
-					target="_blank" style="background:transparent url(/images/appButton.png) no-repeat left -30px;display:inline-block;width:96px;height:28px;"></a>
-				<a href="https://www.windowsphone.com/s?appid=b905a877-bd55-4ce7-a7aa-467cdc3a21f4"
-					target="_blank" style="background:transparent url(/images/appButton.png) no-repeat left -60px;display:inline-block;width:96px;height:28px;"></a>
-				</div>
-			</div>
-    </div>
+          </div>
+    </nav>
 </footer>
