--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -1,42 +1,26 @@
 <meta HTTP-EQUIV="expires" CONTENT="Wed, 01 Jan 1997 01:01:01 GMT">
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#exampleNavbarCollapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>            
-        </div>
-        <% 
-         var menuClass = new Array("#", "#","#","#","#","#", "#", "#", "#");
-         if(activeMenu == "Home") menuClass[0] = "active";
-         if(activeMenu == "Charities") menuClass[1] = "active";
-         if(activeMenu == "Enquiry") menuClass[2] = "active";
-         if(activeMenu == "SignIn") menuClass[3] = "active";
-         if(activeMenu == "SignUp") menuClass[4] = "active";
-		 if(activeMenu == "MyAccount") menuClass[5] = "active";
 
-        %>
-        <div class="collapse navbar-collapse" id="exampleNavbarCollapse">
-            <ul class="nav navbar-nav">
-                <li class="<%=menuClass[0]%>"><a href="/">WillGive</a></li>
-                <li class="<%=menuClass[1]%>"><a href="/charities/listCharities">Charities</a></li>
-                <li class="<%=menuClass[2]%>"><a href="/search">Donation Tracking</a></li>
-            </ul>
-            <form class="nav navbar-nav navbar-form" action="/charities/searchCharities" method="get" role="search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search Charities" name="keyword" id="narbarKeyword">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit" style="background-color:#ffb900;"><i class="glyphicon glyphicon-search"></i></button>
-                    </div>
-                </div>
-            </form>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <%
+    var menuClass = new Array("#", "#","#","#","#","#", "#", "#", "#");
+    if(activeMenu == "Home") menuClass[0] = "active";
+    if(activeMenu == "Charities") menuClass[1] = "active";
+    if(activeMenu == "Enquiry") menuClass[2] = "active";
+    if(activeMenu == "SignIn") menuClass[3] = "active";
+    if(activeMenu == "SignUp") menuClass[4] = "active";
+    if(activeMenu == "MyAccount") menuClass[5] = "active";
+
+    %>
+
+    <div class="container-fluid" style="background: #ffffff">
+
+        <div class="container">
+            <img src="/images/testLogo.png" />
             <% if ( 'undefined' == typeof user || user == null ) { %>
-            <ul class="nav navbar-nav navbar-right" style="padding-right:15px;">
-                <li class="<%=menuClass[3]%>"><a href="/login/signin">Log In</a></li>
-                <li class="<%=menuClass[4]%>"><a href="/login/signup">Join</a></li>
+
+            <ul class="nav navbar-nav navbar-right" style="padding-right:15px;padding-top:15px">
+                <li class="<%=menuClass[3]%>"><a href="/login/signin"><img src="/images/login.png" /></a></li>
+                <li class="<%=menuClass[4]%>"><a href="/login/signup"><img src="/images/join.png" /></a></li>
             </ul>
             <% } else if( 'recipient' != user.provider ){ %>
             <ul class="nav navbar-nav navbar-right" style="padding-right:15px;">
@@ -47,9 +31,9 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-					  <% if ( 'admin@admin.com' == user.email) { %>
+                        <% if ( 'admin@admin.com' == user.email) { %>
                         <li><a href="/tools/adminTools" target='_blank'>Admin Tools</a></li>
-					  <% } %>
+                        <% } %>
                         <li><a href="/users/account">Edit Profile</a></li>
                         <li><a href="/users/settings">Settings</a></li>
                         <li><a href="/users/contribution">My Contributions</a></li>
@@ -76,6 +60,36 @@
                 </li>
             </ul>
             <% } %>
+
+
+
+
+        </div>
+
+
+    </div>
+    <div class="container-fluid">
+
+
+        <div class="container" id="exampleNavbarCollapse">
+            <ul class="nav navbar-nav">
+                <li class="<%=menuClass[0]%>"><a href="/">WillGive</a></li>
+                <li class="<%=menuClass[1]%>"><a href="/charities/listCharities">Charities</a></li>
+                <li class="<%=menuClass[2]%>"><a href="/search">Donation Tracking</a></li>
+            </ul>
+
+
+            <form class="nav navbar-nav navbar-form navbar-right" action="/charities/searchCharities" method="get" role="search">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search Charities" name="keyword" id="narbarKeyword">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit" style="background-color:#ffb900;"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+
+
+
         </div>
 
     </div>
