--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -86,6 +86,7 @@
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/jquery-validation/dist/jquery.validate.js"></script>
 <script src="/assets/js/jquery.simplePagination.js"></script>
+<script src="https://checkout.stripe.com/v2/checkout.js"></script>
 <script>
     var transactionHistory=[];
 
@@ -104,6 +105,9 @@
                 return;
             }
             stripeCustomerId = result.stripeCustomerId;
+
+            alert("current amount:"+ result.amount);
+
             amount =result.amount;
             receipientId =result.receipientId;
 
@@ -142,6 +146,46 @@
                         });;
                 console.dir("Pledge payment successfully made ");
                 //return;
+            }
+            else {
+                alert("now start paying");
+                alert( "amount"+jQuery("#amount").val());
+                var token = function (res) {
+                    //$('#stripeTokenInput').val(res.id);
+                    //$('form').submit();
+                    $.post("/services/payment/stripePayment", {
+                        amount: jQuery("#amount").val(),
+                        notes: jQuery("#notes").val(),
+                        receipientId: jQuery("#receipientId").val(),
+                        stripeCustomerId: 0,
+                        stripeToken: res.id
+                    }).done(function (msg) {
+                        $('#stripeTokenInput').val('');
+                        console.dir("after submission succeed");
+                    })
+                            .fail(function (xhr, textStatus, errorThrown) {
+                                $('#stripeTokenInput').val('');
+                                alert(xhr.responseText);
+                                console.dir("after submission failed");
+                            });
+                };
+                var payAmount = jQuery("#amount").val();
+
+                StripeCheckout.open({
+                    key: 'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
+                    address: true,
+                    amount: payAmount * 100,//scale in cents instead of dollar
+                    currency: 'usd',
+                    name: 'User:' + '<%=user.firstName%>',
+                    description: 'Will Give Checkout',
+                    allowRememberMe: false,
+                    panelLabel: 'Checkout',
+                    token: token
+                });
+
+                return false;
+
+
             }
         });
     }
