--- a/views/login/userPledges.ejs
+++ b/views/login/userPledges.ejs
@@ -91,139 +91,157 @@
     var transactionHistory=[];
 
 
+    //stripeCustomerId = result.stripeCustomerId;
+
+
     function approvePledge(pb) {
 
         var queryPledgeByConfirmationCode = '/services/payment/stripePayment/queryPledge/';
 
-        console.dir("confirmationId: "+pb.id);//
+        var existingUserById = '/services/payment/stripePayment/queryUser/';
+
+        console.dir("confirmationId: " + pb.id);//
 
         $.get(queryPledgeByConfirmationCode, { confirmationCode: pb.id}, function (result) {
-            console.dir("queryPledgeByConfirmationCode: "+ pb.id);
-            if (!result || result == "failed") {
-                console.dir("failed to get results");
+            console.dir("queryPledgeByConfirmationCode: " + pb.id);
+
                 //update transaction histroy and mark status as complete
-                return;
-            }
-            stripeCustomerId = result.stripeCustomerId;
 
-            alert("current amount:"+ result.amount);
+            console.dir("current amount:" + result.amount);
+            console.dir("current recipientId:" + result.recipientId);
+            console.dir("current stripeCustomerId:" + result.stripeCustomerId);
 
-            amount =result.amount;
-            receipientId =result.receipientId;
+                var amount = result.amount;
+                var recipientId = result.recipientId;
 
-            jQuery("#amount").val(amount);
-            jQuery("#stripeCustomerId").val(stripeCustomerId);
-            jQuery("#receipientId").val(receipientId);
-            jQuery("#isPledge").val(true);
-            jQuery("#confirmationCode").val(pb.id);
-
-            console.dir("hiding: " + pb.id+"tr");
-            jQuery("#"+pb.id+"tr").hide();
+                var stripeCustomerId = result.stripeCustomerId;
 
 
 
-            console.dir("stripeCustomerId(charity.ejs): " + stripeCustomerId);
 
-            console.dir(" isPledge .val " +  jQuery("#isPledge").val());
 
-            //if stripCustomerId not null, then post to the payment page automatically
-            if ($.trim(stripeCustomerId)) {
+                jQuery("#amount").val(amount);
                 jQuery("#stripeCustomerId").val(stripeCustomerId);
-                /*
-                $('form').submit().done( function(msg) { console.dir("after submission succeed"); } )
-                        .fail( function(xhr, textStatus, errorThrown) {
-                            alert(xhr.responseText);
-                        });*/
+                jQuery("#receipientId").val(recipientId);
+                jQuery("#isPledge").val(true);
+                jQuery("#confirmationCode").val(pb.id);
 
-                $.post("/services/payment/stripePayment", {amount: jQuery("#amount").val(), notes: jQuery("#notes").val(),
-                            receipientId: jQuery("#receipientId").val(), stripeCustomerId: jQuery("#stripeCustomerId").val(),
-                            stripeTokenInput: jQuery("#stripeTokenInput").val(), isPledge:jQuery("#isPledge").val(),
-                            confirmationCode:jQuery("#confirmationCode").val()
-                        }
-                ) .done( function(msg) { console.dir("after submission succeed"); } )
-                        .fail( function(xhr, textStatus, errorThrown) {
-                            alert(xhr.responseText);
-                        });;
-                console.dir("Pledge payment successfully made ");
-                //return;
-            }
-            else {
-                alert("now start paying");
-                alert( "amount"+jQuery("#amount").val());
-                var token = function (res) {
-                    //$('#stripeTokenInput').val(res.id);
-                    //$('form').submit();
-                    $.post("/services/payment/stripePayment", {
-                        amount: jQuery("#amount").val(),
-                        notes: jQuery("#notes").val(),
-                        receipientId: jQuery("#receipientId").val(),
-                        stripeCustomerId: 0,
-                        stripeToken: res.id
-                    }).done(function (msg) {
-                        $('#stripeTokenInput').val('');
-                        console.dir("after submission succeed");
-                    })
+                console.dir("hiding: " + pb.id + "tr");
+                jQuery("#" + pb.id + "tr").hide();
+
+
+                console.dir("stripeCustomerId(charity.ejs): " + stripeCustomerId);
+
+                console.dir(" isPledge .val " + jQuery("#isPledge").val());
+
+                //if stripCustomerId not null, then post to the payment page automatically
+                if (stripeCustomerId != 'undefined' && $.trim(stripeCustomerId)) {
+                    console.dir("existing customers");
+
+                    jQuery("#stripeCustomerId").val(stripeCustomerId);
+                    /*
+                     $('form').submit().done( function(msg) { console.dir("after submission succeed"); } )
+                     .fail( function(xhr, textStatus, errorThrown) {
+                     alert(xhr.responseText);
+                     });*/
+
+                    $.post("/services/payment/stripePayment", {amount: jQuery("#amount").val(), notes: jQuery("#notes").val(),
+                                receipientId: jQuery("#receipientId").val(), stripeCustomerId: jQuery("#stripeCustomerId").val(),
+                                stripeTokenInput: jQuery("#stripeTokenInput").val(), isPledge: jQuery("#isPledge").val(),
+                                confirmationCode: jQuery("#confirmationCode").val()
+                            }
+                    ).done(function (msg) {
+                                console.dir("after submission succeed");
+                            })
                             .fail(function (xhr, textStatus, errorThrown) {
-                                $('#stripeTokenInput').val('');
                                 alert(xhr.responseText);
-                                console.dir("after submission failed");
                             });
-                };
-                var payAmount = jQuery("#amount").val();
+                    ;
+                    console.dir("Pledge payment successfully made ");
+                    //return;
+                }
+                else {
+                    console.dir("now start paying");
+                    console.dir("amount" + jQuery("#amount").val());
+                    var token = function (res) {
+                        //$('#stripeTokenInput').val(res.id);
+                        //$('form').submit();
+                        $.post("/services/payment/stripePayment", {
+                            amount: jQuery("#amount").val(),
+                            notes: jQuery("#notes").val(),
+                            receipientId: jQuery("#receipientId").val(),
+                            stripeCustomerId: 0,
+                            stripeToken: res.id
+                        }).done(function (msg) {
+                            $('#stripeTokenInput').val('');
+                            console.dir("after submission succeed");
+                        })
+                                .fail(function (xhr, textStatus, errorThrown) {
+                                    $('#stripeTokenInput').val('');
+                                    alert(xhr.responseText);
+                                    console.dir("after submission failed");
+                                });
+                    };
+                    var payAmount = jQuery("#amount").val();
 
-                StripeCheckout.open({
-                    key: 'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
-                    address: true,
-                    amount: payAmount * 100,//scale in cents instead of dollar
-                    currency: 'usd',
-                    name: 'User:' + '<%=user.firstName%>',
-                    description: 'Will Give Checkout',
-                    allowRememberMe: false,
-                    panelLabel: 'Checkout',
-                    token: token
-                });
+                    StripeCheckout.open({
+                        key: 'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
+                        address: true,
+                        amount: payAmount * 100,//scale in cents instead of dollar
+                        currency: 'usd',
+                        name: 'User:' + '<%=user.firstName%>',
+                        description: 'Will Give Checkout',
+                        allowRememberMe: false,
+                        panelLabel: 'Checkout',
+                        token: token
+                    });
 
-                return false;
+                    return false;
 
 
-            }
+                }
+
+
         });
+
+
     }
 
     var defaultHTML =
-        '<tr id={ConfirmationIdTr}> <td > {Id} </td> '+
-        ' <td> {Date} </td> ' +
-        ' <td class="text-center"> {Amount} </td> ' +
-        ' <td> {Recipient} </td> ' +
-        ' <td> {Status} </td> ' +
-        ' <td> <button type="button" id={ConfirmationId} class=\'donateButton\' onclick=\'approvePledge(this);\'>Approve</button></td>'
-        ' </tr> ';
+            '<tr id={ConfirmationIdTr}> <td > {Id} </td> ' +
+            ' <td> {Date} </td> ' +
+            ' <td class="text-center"> {Amount} </td> ' +
+            ' <td> {Recipient} </td> ' +
+            ' <td> {Status} </td> ' +
+            ' <td> <button type="button" id={ConfirmationId} class=\'donateButton\' onclick=\'approvePledge(this);\'>Approve</button></td>'
+    ' </tr> ';
 
-    function replaceHtml(transaction){
-        return defaultHTML.replace("{Id}",transaction.confirmationCode)
-                .replace("{Date}",dateTimeDisplayFormatter(transaction.dateTime))
-                .replace("{Amount}",transaction.amount)
-                .replace("{Recipient}",'<a href="/charity/'+transaction.recipientId+'" style="color: #202090">'+transaction.name+'</a>')
-                .replace("{Status}",transaction.status).replace("{ConfirmationId}",transaction.confirmationCode).replace("{ConfirmationIdTr}",transaction.confirmationCode+"tr");
-                ;
+    function replaceHtml(transaction) {
+        return defaultHTML.replace("{Id}", transaction.confirmationCode)
+                .replace("{Date}", dateTimeDisplayFormatter(transaction.dateTime))
+                .replace("{Amount}", transaction.amount)
+                .replace("{Recipient}", '<a href="/charity/' + transaction.recipientId + '" style="color: #202090">' + transaction.name + '</a>')
+                .replace("{Status}", transaction.status).replace("{ConfirmationId}", transaction.confirmationCode).replace("{ConfirmationIdTr}", transaction.confirmationCode + "tr");
+        ;
 
     }
-        // function initResultPage(searchResults){
-    function initResultPage(data){
+
+    // function initResultPage(searchResults){
+    function initResultPage(data) {
         $('#botPage').empty();
 
         var itemsOnPage = 20;
         var resultConainer = $('#transactionHistoryTableBody');
 
-        $('#botPage').pagination({  
+        $('#botPage').pagination({
             items: transactionHistory.length,
             itemsOnPage: itemsOnPage,
             onInit: initPage,
             currentPage: 0,
-            onPageClick: function(){
-                var page_index = $("#botPage").pagination('getCurrentPage') -1;
+            onPageClick: function () {
+                var page_index = $("#botPage").pagination('getCurrentPage') - 1;
                 resultConainer.empty();
-                for(var i=page_index*itemsOnPage;i<(page_index+1)*itemsOnPage;++i) {
+                for (var i = page_index * itemsOnPage; i < (page_index + 1) * itemsOnPage; ++i) {
                     resultConainer.append(replaceHtml(transactionHistory[i]));
                 }
                 //$("#page").pagination('drawPage',$("#botPage").pagination('getCurrentPage'));
@@ -232,15 +250,16 @@
             cssStyle: 'light-theme'
         });
 
-
-
         function initPage() {
             resultConainer.empty();
-            for(var i=0;i<itemsOnPage && i< transactionHistory.length;++i) {
+            for (var i = 0; i < itemsOnPage && i < transactionHistory.length; ++i) {
                 resultConainer.append(replaceHtml(transactionHistory[i]));
             }
         }
     }
+
+
+
 
 
 
