--- a/views/charity/charityListTemplate.ejs
+++ b/views/charity/charityListTemplate.ejs
@@ -1,10 +1,10 @@
 <script>
     var defaultHTML =
-        ' <div  class="col-xs-11" style="border: 2px solid; border-radius: 10px; margin-top: 1%; margin-bottom: 1%"> ' +
-        '   <div class="col-xs-4"> ' +
+        ' <div  class="col-xs-11" style="border: 2px solid; border-color: #f5f5f5;background: #f5f5f5;border-radius: 10px; margin-top: 1%; margin-bottom: 1%"> ' +
+        '   <div class="col-xs-4" style="margin-top: 1%;margin-bottom: 1%"> ' +
         '      <img src="{ImagePath}" style="height:100%;max-width:220px;max-height: 160px"> ' +
         '   </div> ' +
-        '   <div class="col-xs-7"> '+
+        '   <div class="col-xs-7" style="margin-top: 1%;margin-bottom: 1%"> '+
         '      <div class=""> ' +
         '          <h4>{name}</a> '+
         '           {ICONS} ' +
