--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -15,6 +15,7 @@
     <div class="container-fluid" style="background: #ffffff">
 
         <div class="container">
+            <div class="row">
             <img src="/images/testLogo.png" />
             <% if ( 'undefined' == typeof user || user == null ) { %>
 
@@ -63,7 +64,7 @@
 
 
 
-
+            </div>
         </div>
 
 
