--- a/views/search.ejs
+++ b/views/search.ejs
@@ -50,7 +50,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="col-md-7 columns" >
+    <div class="col-md-7 columns" style="padding-top:100px">
 
         <h3>Please enter a confirmation code to query charity donation</h3>
         <p>We take the charity donation security and transparency very seriously. We've made all the donation transaction public and easy to track.
